# bug

./: README.md
bug-engine/: .python-version  pyproject.toml
bug-engine/src/bug_engine/: Untitled.ipynb  hex.py
bug-engine/src/bug_engine/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  bug_engine-checkpoint.py
bug-engine/tests/: test_bug_engine.py
server/: .python-version  main.py  pyproject.toml
server/components/: BugBoard.css  BugBoard.js  BugHexagon.js
server/services/: Board.js  Store.js
server/static/css/: bugboard.css
server/static/js/: app.js
server/templates/: index.html
